--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@ body {
 @mixin lineEffect() {
   @media (min-width: 1024px) {
     position: relative;
-    &:after {
+    &::after {
       position: absolute;
       content: "";
       display: block;
@@ -29,16 +29,16 @@ body {
       width: 0px;
       transition: all 0.6s ease;
     }
-    &:hover:after {
+    &:hover::after {
       width: 100%;
       background: #23aea8;
     }
   }
 }
 
-@mixin verticalLine() {
+@mixin verticalLine($tag) {
   @media (min-width: 1024px) {
-    &::after {
+    &::#{$tag} {
       position: absolute;
       content: "";
       width: 2px;
