--- a/src/components/noticias/Noticias.scss
+++ b/src/components/noticias/Noticias.scss
@@ -26,7 +26,6 @@
       font-weight: 100;
       padding-top: 3rem;
     }
-
-    @include verticalLine();
+    @include verticalLine(after);
   }
 }
